fixed the font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -669,7 +669,7 @@ body{
 
 @media screen and (max-width: 768px) {
     .text-contrast{ 
-        font-size: 13px;
+        font-size: 16px;
         line-height: 1.5;
         margin-top: 1rem;
         margin-bottom: 1rem;
